--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,7 @@
     "target": "es5",
     "lib": ["es2016","dom"],
     "module": "commonjs",
-    "outDir": "dist",
-    "declarationDir": "declarations",
-    "declaration": true
+    "outDir": "dist"
   },
   "include": [
     "src/**/*.ts"
